# snavquad_interface

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugin.xml  package.xml
config/: 230_gains.yaml  ddk.rviz  ddk_gains.yaml  downward.yaml  mav_manager_params.yaml  starling_gains.yaml  tiercel_gains.yaml  tracker_params.yaml  tracker_params_slow.yaml  trackers.yaml
config/kalibr/: aprilgrid.yaml  checkerboard.yaml  snap_imu.yaml
config/vio_masks/: mask_ddk.pgm  mask_ddk_test.pgm
doc/: CameraCalib.md  README_arm64v8_docker.md  ROSSetup.md  SnapFlightSetup.md  VOXLSetup.md
launch/: calibration_bagging.launch  depth_pcl.launch  disp_nodelet.launch  fisheye_camera_info.launch  hires.launch  octomap_mapping.launch  pc_filter.launch  quad_control.launch  quad_control_slow.launch  snav_interface.launch  snav_rviz.launch  snav_tf_pub.launch  snav_vio.launch  snav_vio_overlay.launch  state_control.launch  stereo.launch  tof_with_tf.launch  vio_qc.launch  vislam.launch  voxl_vio.launch
scripts/: run_docker_plan.sh  run_docker_tag.sh  sync_install.sh  tmux_calib_voxl.sh  tmux_calibration.sh  tmux_com.sh  tmux_ground_station.sh  tmux_snav.sh  tmux_tag.sh  tmux_vioqc.sh  tmux_voxl.sh
scripts/capture/: onboard_camera_only_record.sh  play_bag.sh  record.sh  record_com.sh  set_date.sh  tmux_calibrate_bag.sh  tmux_capture_calib_data.sh  tmux_visualize_bag.sh  view_stereo_raw.sh
scripts/capture/rqt/: DetectorGS.perspective  Disparity.perspective  StereoCalibrate.perspective
src/: point_overlay.cpp  posNode.cpp  so3cmd_to_snav_nodelet.cpp  tf_pub.cpp  trpycmd_to_snav_nodelet.cpp  vioOdom.cpp
